--- a/ios/Meetups/Info.plist
+++ b/ios/Meetups/Info.plist
@@ -2,6 +2,44 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbauth2</string>
+  </array>
+  <key>NSAppTransportSecurity</key>
+  <dict>
+    <key>NSExceptionDomains</key>
+    <dict>
+      <key>facebook.com</key>
+      <dict>
+        <key>NSIncludesSubdomains</key> <true/>
+        <key>NSThirdPartyExceptionRequiresForwardSecrecy</key> <false/>
+      </dict>
+      <key>fbcdn.net</key>
+      <dict>
+        <key>NSIncludesSubdomains</key> <true/>
+        <key>NSThirdPartyExceptionRequiresForwardSecrecy</key>  <false/>
+      </dict>
+      <key>akamaihd.net</key>
+      <dict>
+        <key>NSIncludesSubdomains</key> <true/>
+        <key>NSThirdPartyExceptionRequiresForwardSecrecy</key> <false/>
+      </dict>
+    </dict>
+  </dict>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb909343772484662</string>
+      </array>
+    </dict>
+  </array>
+  <key>FacebookAppID</key>
+  <string>909343772484662</string>
+  <key>FacebookDisplayName</key>
+  <string>Meetup</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
