--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "firebase": "^2.3.1",
     "react-native": "^0.13.1",
+    "react-native-blur": "^0.7.5",
+    "react-native-facebook-login": "^0.6.2",
     "react-native-navbar": "^1.0.3"
   }
 }
