--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "alt": "^0.17.6",
     "firebase": "^2.3.1",
     "react-native": "^0.13.1",
     "react-native-blur": "^0.7.5",
