--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "alt": "^0.17.6",
     "firebase": "^2.3.1",
     "react-native": "^0.13.1",
+    "react-native-background-geolocation": "0.0.13",
     "react-native-blur": "^0.7.5",
     "react-native-facebook-login": "^0.6.2",
     "react-native-navbar": "^1.0.3"
