--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-native-background-geolocation": "0.0.13",
     "react-native-blur": "^0.7.5",
     "react-native-facebook-login": "^0.6.2",
+    "react-native-fbsdkcore": "0.0.6",
+    "react-native-fbsdklogin": "0.0.6",
+    "react-native-mapbox-gl": "^1.1.0",
     "react-native-navbar": "^1.0.3"
   }
 }
