--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "alt": "^0.17.6",
     "firebase": "^2.3.1",
+    "lodash": "^3.10.1",
     "react-native": "^0.13.1",
     "react-native-background-geolocation": "0.0.13",
     "react-native-blur": "^0.7.5",
