--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "alt": "^0.17.6",
     "firebase": "^2.3.1",
     "lodash": "^3.10.1",
+    "react-addons-pure-render-mixin": "^0.14.2",
     "react-native": "^0.13.1",
     "react-native-background-geolocation": "0.0.13",
     "react-native-blur": "^0.7.5",
