--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-facebook-login": "^0.6.2",
     "react-native-fbsdkcore": "0.0.6",
     "react-native-fbsdklogin": "0.0.6",
+    "react-native-location": "^0.14.3",
     "react-native-mapbox-gl": "^1.1.0",
     "react-native-navbar": "1.0.3",
     "reactfire": "^0.5.1"
