--- a/ios/Meetups/Info.plist
+++ b/ios/Meetups/Info.plist
@@ -44,10 +44,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>App requires background location tracking</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>WE WANT TO KNOW WHERE YOU ARE</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
