--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "alt": "^0.17.6",
     "firebase": "^2.3.1",
+    "geofire": "^3.2.3",
     "lodash": "^3.10.1",
     "react-addons-pure-render-mixin": "^0.14.2",
     "react-native": "^0.13.1",
