--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "alt": "^0.17.6",
+    "crypto-js": "^3.1.5",
     "firebase": "^2.3.1",
     "geofire": "^3.2.3",
     "lodash": "^3.10.1",
