--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geofire": "^3.2.3",
     "lodash": "^3.10.1",
     "react-addons-pure-render-mixin": "^0.14.2",
+    "react-addons-update": "^0.14.3",
     "react-native": "^0.13.1",
     "react-native-background-geolocation": "0.0.13",
     "react-native-blur": "^0.7.5",
